[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/trascanOpen_20.png" type="Texture" id=1]
[ext_resource path="res://equipment/TagContainer.gd" type="Script" id=2]

[node name="TagContainer" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TagLabel" type="Label" parent="."]
margin_top = 349.0
margin_right = 1248.0
margin_bottom = 371.0
size_flags_horizontal = 3

[node name="DeleteButton" type="Button" parent="."]
margin_left = 1248.0
margin_top = 344.0
margin_right = 1280.0
margin_bottom = 376.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 4
icon = ExtResource( 1 )
flat = true
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
